--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -10,9 +10,37 @@
             height: 300px;
         }
 
-        .movie-info {
+        .star-rating input[type="radio"] {
+            display: none;
+        }
+
+        .star-rating label {
+            display: inline-block;
+            font-size: 24px;
+            color: #ccc;
+            cursor: pointer;
+        }
+
+        .star-rating label.active {
+            color: #ffdd00;
+        }
+
+        .star-rating {
+            direction: rtl;
+        }
+
+        .movie-info > div {
+            margin-bottom: 10px;
+        }
+
+        .movie-info > div.actors {
             margin-top: 20px;
         }
+
+        .add-review-button {
+            margin-top: 20px;
+        }
+
     </style>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet" />
@@ -59,44 +87,60 @@
                 </ul>
             </div>
         </div>
+
     </nav>
 
     <div class="container container-narrow">
         <div class="row justify-content-center">
-            <div class="col-lg-8 text-left">
-                <h1 class="font-weight-bold">Movie</h1>
-                <div class="media">
-                    <img class="mr-3 movie-image" alt="Movie Poster" th:src="${movie.posterUrl}">
-                    <div class="media-body movie-info">
-                        <h5 class="mt-0 mb-1">
-                            <b th:text="${movie.title}"></b>
-                        </h5>
-                        <div th:text="${movie.description}"></div>
-                        <b>Runtime:</b> <span th:text="${movie.runtime} + ' min'"></span>
-                        <div>
-                            <b>Year:</b> <span th:text="${movie.year}"></span>
+            <div class="col-lg-3">
+                <div class="row">
+                    <div class="col-md-12">
+                        <img class="mr-3 movie-image" alt="Movie Poster" th:src="${movie.posterUrl}">
+                        <div class="add-review-button">
+                            <a th:href="'/search/' + ${movie.id} + '/add-review'" class="btn btn-primary red-button">Add Review</a>
                         </div>
                         <div>
-                            <b>Genre:</b> <span th:text="${movie.genre}"></span>
-                        </div>
-                        <div>
-                            <b>Trailer:</b>
-                            <div>
-                                <iframe width="560" height="315" th:src="${movie.trailerUrl}" frameborder="0"
-                                        allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                            <b>Rating:</b>
+                            <div class="star-rating" th:data-rating="${movie.rating}">
+                                <input type="radio" id="star5" name="rating" value="5" th:checked="${movie.rating == 5}" />
+                                <label for="star5" title="5 stars" data-value="5" class="fa fa-star"></label>
+                                <input type="radio" id="star4" name="rating" value="4" th:checked="${movie.rating == 4}" />
+                                <label for="star4" title="4 stars" data-value="4" class="fa fa-star"></label>
+                                <input type="radio" id="star3" name="rating" value="3" th:checked="${movie.rating == 3}" />
+                                <label for="star3" title="3 stars" data-value="3" class="fa fa-star"></label>
+                                <input type="radio" id="star2" name="rating" value="2" th:checked="${movie.rating == 2}" />
+                                <label for="star2" title="2 stars" data-value="2" class="fa fa-star"></label>
+                                <input type="radio" id="star1" name="rating" value="1" th:checked="${movie.rating == 1}" />
+                                <label for="star1" title="1 star" data-value="1" class="fa fa-star"></label>
                             </div>
-                        </div>
-                        <div>
-                            <b>Rating:</b> <span th:text="${movie.rating}"></span>
-                        </div>
-                        <div>
-                            <b>Actors:</b> <span th:text="${movie.actors}"></span>
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="col-lg-5">
+                <h1 class="font-weight-bold">Movie</h1>
+                <h5 class="mt-0 mb-1">
+                    <b th:text="${movie.title}"></b>
+                </h5>
+                <div th:text="${movie.description}"></div>
                 <div>
-                    <a th:href="'/search/' + ${movie.id} + '/add-review'" class="btn btn-primary red-button">Add Review</a>
+                    <b>Runtime:</b> <span th:text="${movie.runtime} + ' min'"></span>
                 </div>
+                <div>
+                    <b>Year:</b> <span th:text="${movie.year}"></span>
+                </div>
+                <div>
+                    <b>Genre:</b> <span th:text="${movie.genre}"></span>
+                </div>
+                <div>
+                    <b>Trailer:</b>
+                    <div>
+                        <iframe width="450" height="281" th:src="${movie.trailerUrl}" frameborder="0"
+                                allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="actors"><b>Actors:</b> <span th:text="${movie.actors}"></span></div>
             </div>
 
             <div class="col-lg-4">
@@ -104,22 +148,35 @@
                 <ul>
                     <li th:each="review : ${reviewList}">
                         <div>
-                            <h4><b>User:</b> <span th:text="${review.user}"></span></h4>
-                            <p><b>Rating:</b> <span th:text="${review.rating}"></span></p>
-                            <p><b>Comment:</b> <span th:text="${review.comment}"></span></p>
+                            <h4><b>User:</b> <span th:text="${review.user.name}"></span></h4>
+                            <p><b>Rating:</b>
+                                <span class="star-rating">
+                                <span th:each="i : ${#numbers.sequence(1, review.rating)}"
+                                      class="fa fa-star"></span>
+                            </span>
+                            </p>
+                            <p><b>Comment:</b> <span th:text="${review.description}"></span></p>
                         </div>
                     </li>
                 </ul>
             </div>
         </div>
     </div>
-
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
             integrity="sha384-pzjw8f+uaZu2c+0Em+qXlvFqjjr7vAC9N1o0kY/02Dw2Fh8Tv68v3S4gJJqFq6yN"
             crossorigin="anonymous"></script>
 
+    <script>
+        $(document).ready(function () {
+            var rating = $('.star-rating').data('rating');
+            $('.star-rating input[type="radio"][value="' + rating + '"]').prop('checked', true);
+            $('.star-rating label').slice(-rating).addClass('active');
+        });
+    </script>
 </div>
 </body>
 
 </html>
+
+
