--- a/src/main/resources/templates/search-results.html
+++ b/src/main/resources/templates/search-results.html
@@ -29,6 +29,13 @@
             color: red;
             transition: color 0.3s ease-in-out;
             margin-bottom: 5px;
+            width: 100%;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 2;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: normal;
         }
 
         .movie-title:hover {
