--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -62,7 +62,14 @@
                     </div>
                     <div class="form-group">
                         <label>Genre</label>
-                        <input name="genre" type="text" class="form-control form-control-lg long-input">
+                        <select name="genre" class="form-control form-control-lg">
+                            <option value="">Select Genre</option>
+                            <option value="Action">Action</option>
+                            <option value="Adventure">Adventure</option>
+                            <option value="Comedy">Comedy</option>
+                            <option value="Drama">Drama</option>
+                            <option value="Crime">Crime</option>
+                        </select>
                     </div>
                     <div class="form-group">
                         <label>Actors</label>
