--- a/src/main/resources/templates/add-review.html
+++ b/src/main/resources/templates/add-review.html
@@ -9,46 +9,64 @@
       width: 200px;
       height: 300px;
     }
-    .movie-info {
-      margin-top: 20px;
-    }
+
     .star-rating input[type="radio"] {
       display: none;
     }
+
     .star-rating label {
       display: inline-block;
       font-size: 24px;
       color: #ccc;
       cursor: pointer;
     }
-    .star-rating label:hover,
-    .star-rating label:hover ~ label,
-    .star-rating input[type="radio"]:checked ~ label {
+
+    .star-rating label.active {
       color: #ffdd00;
     }
+
     .star-rating {
       direction: rtl;
     }
-    .review-description {
-      height: 100px;
+
+    .star-rating-two input[type="radio"] {
+      display: none;
+    }
+    .star-rating-two label {
+      display: inline-block;
+      font-size: 24px;
+      color: #ccc;
+      cursor: pointer;
+    }
+    .star-rating-two label:hover,
+    .star-rating-two label:hover ~ label,
+    .star-rating-two input[type="radio"]:checked ~ label {
+      color: #ffdd00;
+    }
+    .star-rating-two {
+      direction: rtl;
+    }
+    .movie-info > div {
+      margin-bottom: 10px;
     }
 
-    .trailer-container {
-      max-width: 560px;
-      margin: 0 auto;
+    .movie-info > div.actors {
+      margin-top: 20px;
     }
 
-    .trailer-container iframe {
-      width: 100%;
-      height: 315px;
+    .add-review-button {
+      margin-top: 20px;
     }
+
   </style>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
+        integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
         crossorigin="anonymous">
   <link rel="stylesheet" href="/styles/main-left.css">
 </head>
+
 <body>
 <div class="font-wrapper">
   <nav class="navbar navbar-expand-md navbar-light bg-light">
@@ -86,42 +104,63 @@
         </ul>
       </div>
     </div>
+
   </nav>
 
   <div class="container container-narrow">
     <div class="row justify-content-center">
-      <div class="col-lg-8 text-left">
-        <h1 class="font-weight-bold">Movie</h1>
-        <div class="media">
-          <img class="mr-3 movie-image" alt="Movie Poster" th:src="${movie.posterUrl}">
-          <div class="media-body movie-info">
-            <h5 class="mt-0 mb-1">
-              <b th:text="${movie.title}"></b>
-            </h5>
-            <div th:text="${movie.description}"></div>
-            <b>Runtime:</b> <span th:text="${movie.runtime} + ' min'"></span>
-            <div>
-              <b>Year:</b> <span th:text="${movie.year}"></span>
+      <div class="col-lg-3">
+        <div class="row">
+          <div class="col-md-12">
+            <img class="mr-3 movie-image" alt="Movie Poster" th:src="${movie.posterUrl}">
+            <div class="add-review-button">
+              <a th:href="'/search/' + ${movie.id} + '/add-review'" class="btn btn-primary red-button">Add Review</a>
             </div>
             <div>
-              <b>Genre:</b> <span th:text="${movie.genre}"></span>
-            </div>
-            <div>
-              <b>Trailer:</b>
-              <div class="trailer-container">
-                <iframe width="560" height="315" th:src="${movie.trailerUrl}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              <label>Rating</label>
+              <div class="star-rating-two">
+                <input type="radio" id="star10" name="rating" value="5">
+                <label for="star10" title="5 stars" data-value="5"><i class="fa fa-star"></i></label>
+                <input type="radio" id="star9" name="rating" value="4">
+                <label for="star9" title="4 stars" data-value="4"><i class="fa fa-star"></i></label>
+                <input type="radio" id="star8" name="rating" value="3">
+                <label for="star8" title="3 stars" data-value="3"><i class="fa fa-star"></i></label>
+                <input type="radio" id="star7" name="rating" value="2">
+                <label for="star7" title="2 stars" data-value="2"><i class="fa fa-star"></i></label>
+                <input type="radio" id="star6" name="rating" value="1">
+                <label for="star6" title="1 star" data-value="1"><i class="fa fa-star"></i></label>
               </div>
-            </div>
-            <div>
-              <b>Rating:</b> <span th:text="${movie.rating}"></span>
-            </div>
-            <div>
-              <b>Actors:</b> <span th:text="${movie.actors}"></span>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-lg-4 text-left">
+
+      <div class="col-lg-5">
+        <h1 class="font-weight-bold">Movie</h1>
+        <h5 class="mt-0 mb-1">
+          <b th:text="${movie.title}"></b>
+        </h5>
+        <div th:text="${movie.description}"></div>
+        <div>
+          <b>Runtime:</b> <span th:text="${movie.runtime} + ' min'"></span>
+        </div>
+        <div>
+          <b>Year:</b> <span th:text="${movie.year}"></span>
+        </div>
+        <div>
+          <b>Genre:</b> <span th:text="${movie.genre}"></span>
+        </div>
+        <div>
+          <b>Trailer:</b>
+          <div>
+            <iframe width="450" height="281" th:src="${movie.trailerUrl}" frameborder="0"
+                    allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="actors"><b>Actors:</b> <span th:text="${movie.actors}"></span></div>
+      </div>
+
+      <div class="col-lg-4">
         <h3 class="font-weight-bold">Add Review</h3>
         <form method="post" th:action="'/search/'+${movie.id}+'/add-review'">
           <div class="form-group">
@@ -130,7 +169,7 @@
           </div>
           <div class="form-group">
             <label>Rating</label>
-            <div class="star-rating">
+            <div class="star-rating-two">
               <input type="radio" id="star5" name="rating" value="5">
               <label for="star5" title="5 stars" data-value="5"><i class="fa fa-star"></i></label>
               <input type="radio" id="star4" name="rating" value="4">
@@ -151,12 +190,21 @@
       </div>
     </div>
   </div>
-
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
           integrity="sha384-pzjw8f+uaZu2c+0Em+qXlvFqjjr7vAC9N1o0kY/02Dw2Fh8Tv68v3S4gJJqFq6yN"
           crossorigin="anonymous"></script>
+
+  <script>
+    $(document).ready(function () {
+      var rating = $('.star-rating').data('rating');
+      $('.star-rating input[type="radio"][value="' + rating + '"]').prop('checked', true);
+      $('.star-rating label').slice(-rating).addClass('active');
+    });
+  </script>
 </div>
 </body>
 
 </html>
+
+
