--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -11,7 +11,25 @@
           crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/main-left.css">
 </head>
-
+<style>
+    .star-rating-two input[type="radio"] {
+        display: none;
+    }
+    .star-rating-two label {
+        display: inline-block;
+        font-size: 24px;
+        color: #ccc;
+        cursor: pointer;
+    }
+    .star-rating-two label:hover,
+    .star-rating-two label:hover ~ label,
+    .star-rating-two input[type="radio"]:checked ~ label {
+        color: #ffdd00;
+    }
+    .star-rating-two {
+        direction: rtl;
+    }
+</style>
 <body>
 <div class="font-wrapper">
     <nav class="navbar navbar-expand-md navbar-light bg-light">
@@ -77,7 +95,18 @@
                     </div>
                     <div class="form-group">
                         <label>Rating from</label>
-                        <input name="rating" type="number" class="form-control form-control-lg long-input">
+                        <div class="star-rating-two">
+                            <input type="radio" id="star5" name="rating" value="5">
+                            <label for="star5" title="5 stars" data-value="5"><i class="fa fa-star"></i></label>
+                            <input type="radio" id="star4" name="rating" value="4">
+                            <label for="star4" title="4 stars" data-value="4"><i class="fa fa-star"></i></label>
+                            <input type="radio" id="star3" name="rating" value="3">
+                            <label for="star3" title="3 stars" data-value="3"><i class="fa fa-star"></i></label>
+                            <input type="radio" id="star2" name="rating" value="2">
+                            <label for="star2" title="2 stars" data-value="2"><i class="fa fa-star"></i></label>
+                            <input type="radio" id="star1" name="rating" value="1">
+                            <label for="star1" title="1 star" data-value="1"><i class="fa fa-star"></i></label>
+                        </div>
                     </div>
                     <div class="form-group">
                         <button class="btn btn-primary red-button" type="submit">Search</button>
@@ -91,6 +120,14 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
             integrity="sha384-pzjw8f+uaZu2c+0Em+qXlvFqjjr7vAC9N1o0kY/02Dw2Fh8Tv68v3S4gJJqFq6yN"
             crossorigin="anonymous"></script>
+
+    <script>
+        $(document).ready(function () {
+            var rating = $('.star-rating').data('rating');
+            $('.star-rating input[type="radio"][value="' + rating + '"]').prop('checked', true);
+            $('.star-rating label').slice(-rating).addClass('active');
+        });
+    </script>
 </div>
 </body>
 
