--- a/src/main/resources/templates/add-review.html
+++ b/src/main/resources/templates/add-review.html
@@ -58,6 +58,12 @@
       margin-top: 20px;
     }
 
+
+     .review-description {
+       height: 150px;
+     }
+
+
   </style>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet" />
@@ -165,7 +171,7 @@
         <form method="post" th:action="'/search/'+${movie.id}+'/add-review'">
           <div class="form-group">
             <label>Description</label>
-            <input name="description" type="text" class="form-control review-description" required>
+            <textarea name="description" class="form-control review-description" required></textarea>
           </div>
           <div class="form-group">
             <label>Rating</label>
