--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -58,15 +58,18 @@
                 <form method="post" action="/register">
                     <div class="form-group">
                         <label for="name">Enter your name</label>
-                        <input id="name" name="name" type="text" class="form-control form-control-lg long-input" required>
+                        <input id="name" name="name" type="text" class="form-control form-control-lg long-input" pattern="[a-zA-Z0-9]{2,100}" required placeholder=" ">
+                        <span class="error-message">Name is not valid. No special characters should be used and size should be between 2 and 100.</span>
                     </div>
                     <div class="form-group">
                         <label for="email">Enter your email</label>
-                        <input id="email" name="email" type="email" class="form-control form-control-lg long-input" required>
+                        <input id="email" name="email" type="email" class="form-control form-control-lg long-input" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}" required placeholder=" ">
+                        <span class="error-message">Email is not valid</span>
                     </div>
                     <div class="form-group">
                         <label for="password">Enter your password</label>
-                        <input id="password" name="password" type="password" class="form-control form-control-lg long-input" required>
+                        <input id="password" name="password" type="password" class="form-control form-control-lg long-input" pattern="(?=.*[0-9])(?=.*[a-zA-Z]).{8,32}" required placeholder=" ">
+                        <span class="message">Minimum 8 characters, use at least one letter and one number.</span>
                     </div>
                     <div class="form-group">
                         <label for="dateOfBirth">Enter your Date of Birth</label>
