--- a/src/main/resources/templates/add-review.html
+++ b/src/main/resources/templates/add-review.html
@@ -191,9 +191,16 @@
           <div class="form-group">
             <button class="btn btn-primary red-button" type="submit">Save</button>
             <button class="btn btn-secondary" type="reset">Clear form</button>
-
           </div>
         </form>
+        <section th:if="${status != null}">
+          <div th:if="${status == 'REVIEW_SUCCESS'}">
+            <span class="green-theme">Review added successfully</span>
+          </div>
+          <div th:if="${status == 'REVIEW_FAILED'}">
+            <span class="red-theme" th:text="${message}"></span>
+          </div>
+        </section>
       </div>
     </div>
   </div>
