--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -80,6 +80,11 @@
                         <button class="btn btn-secondary" type="reset">Clear form</button>
                     </div>
                 </form>
+                <section th:if="${status != null}">
+                    <div th:if="${status == 'REGISTER_FAILED'}">
+                        <span class="red-theme" th:text="${message}"></span>
+                    </div>
+                </section>
             </div>
         </div>
     </div>
