--- a/src/main/resources/templates/movie-list.html
+++ b/src/main/resources/templates/movie-list.html
@@ -11,6 +11,13 @@
           integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
           crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/main-left.css">
+
+    <style>
+        .movie-column {
+            column-count: 2;
+            column-gap: 20px;
+        }
+    </style>
 </head>
 
 <body>
@@ -61,14 +68,24 @@
             <div th:if="${movieList.isEmpty()}">
                 No movies to display
             </div>
-            <ul th:if="${!movieList.isEmpty()}">
-                <li th:each="movie: ${movieList}" style="margin-bottom: 10px;">
-                    <span th:text="${movie.getId()}"></span>
-                    <span th:text="${movie.getTitle()}"></span>
-                    <a class="btn btn-secondary" th:href="${'/update-movie/' + movie.getId()}">Update</a>
-                    <a class="btn btn-danger" th:href="${'/delete-movie/' + movie.getId()}">Delete</a>
-                </li>
-            </ul>
+            <div th:if="${!movieList.isEmpty()}">
+                <ul th:if="${movieList.size() <= 10}">
+                    <li th:each="movie: ${movieList}" style="margin-bottom: 10px;">
+                        <span th:text="${movie.getId()}"></span>
+                        <span th:text="${movie.getTitle()}"></span>
+                        <a class="btn btn-secondary" th:href="${'/update-movie/' + movie.getId()}">Update</a>
+                        <a class="btn btn-danger" th:href="${'/delete-movie/' + movie.getId()}">Delete</a>
+                    </li>
+                </ul>
+                <ul th:if="${movieList.size() > 10}" class="movie-column">
+                    <li th:each="movie: ${movieList}" style="margin-bottom: 10px;">
+                        <span th:text="${movie.getId()}"></span>
+                        <span th:text="${movie.getTitle()}"></span>
+                        <a class="btn btn-secondary" th:href="${'/update-movie/' + movie.getId()}">Update</a>
+                        <a class="btn btn-danger" th:href="${'/delete-movie/' + movie.getId()}">Delete</a>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
 
